# series-factory

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml
.cargo/: config.toml
scripts/: gen_info_bars.sh
src/: adaptive_renko.rs  cli.rs  display.rs  idx_heal.rs  lib.rs  main.rs  merge.rs  sampler.rs  seam.rs  sharding.rs  stats.rs  types.rs  vol_bin.rs
src/aggregation/: mod.rs
src/bar_construction/: calibrate.rs  grid.rs  mod.rs  parkinson.rs  renko.rs  vol_builder.rs
src/output/: mod.rs
src/sources/: binance.rs  bitget.rs  bybit.rs  common.rs  mod.rs  okx.rs  synthetic.rs
tests/: bpd_acceptance.rs  integration.rs  integrity_smoke.rs  seam_joint_offline_live.rs  seam_sentinel_skip.rs
